fixed jump for fixed elements

--- a/src/app/pages/documentos/search-resoluciones/search-resoluciones.component.scss
+++ b/src/app/pages/documentos/search-resoluciones/search-resoluciones.component.scss
@@ -3,6 +3,12 @@
     margin-top: 12.4rem;
   }
 
+  .noJump {
+    margin-top:5rem;
+    position:relative;
+    top:-2rem;
+  }
+
 // .httpError {
 //     margin:3rem;
 //     color:white;
